compiler/lume_hir/src/snapshots/lume_hir__lower__tests__struct_snapshots@ext_method.snap
---
source: compiler/lume_hir/src/lower.rs
description: "\n                impl Foo {\n                    fn external bar() -> Int32\n                }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Impl(
            Implementation {
                id: 18213876290066861800,
                type_id: None,
                target: Type {
                    name: Foo,
                    type_params: [],
                    location: <internal>:22:25,
                },
                methods: [
                    MethodDefinition {
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "bar",
                            location: <internal>:60:63,
                        },
                        parameters: [],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                name: std::Int32,
                                type_params: [],
                                location: <internal>:69:74,
                            },
                        ),
                        block: None,
                        location: <internal>:48:74,
                    },
                ],
                type_parameters: [],
                location: <internal>:17:92,
            },
        ),
    },
    statements: {},
    expressions: {},
}
