compiler/lume_hir/src/snapshots/lume_hir__lower__tests__struct_snapshots@method.snap
---
source: compiler/lume_hir/src/lower.rs
description: "\n                impl Foo {\n                    fn bar() -> Int32 {\n                        return 0;\n                    }\n                }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        11075105501540449544: Impl(
            Implementation {
                id: 11075105501540449544,
                impl_id: None,
                target: Type {
                    name: Foo,
                    type_params: [],
                    location: <internal>:22:25,
                },
                methods: [
                    MethodDefinition {
                        method_id: None,
                        visibility: Private,
                        name: Identifier {
                            name: "bar",
                            location: <internal>:51:54,
                        },
                        parameters: [],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                name: std::Int32,
                                type_params: [],
                                location: <internal>:60:65,
                            },
                        ),
                        block: Some(
                            Block {
                                statements: [
                                    Statement {
                                        id: 0,
                                        kind: Return(
                                            Return {
                                                id: 0,
                                                value: Some(
                                                    Expression {
                                                        id: 5871781006564002453,
                                                        location: <internal>:99:100,
                                                        kind: Literal(
                                                            Literal {
                                                                id: 5871781006564002453,
                                                                location: <internal>:99:100,
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: 5871781006564002453,
                                                                        value: 0,
                                                                        kind: I32,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        location: <internal>:92:101,
                                    },
                                ],
                                location: <internal>:66:123,
                            },
                        ),
                        location: <internal>:48:123,
                    },
                ],
                type_parameters: [],
                location: <internal>:17:141,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Return(
                Return {
                    id: 0,
                    value: Some(
                        Expression {
                            id: 5871781006564002453,
                            location: <internal>:99:100,
                            kind: Literal(
                                Literal {
                                    id: 5871781006564002453,
                                    location: <internal>:99:100,
                                    kind: Int(
                                        IntLiteral {
                                            id: 5871781006564002453,
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            location: <internal>:92:101,
        },
    },
    expressions: {
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:99:100,
            kind: Literal(
                Literal {
                    id: 5871781006564002453,
                    location: <internal>:99:100,
                    kind: Int(
                        IntLiteral {
                            id: 5871781006564002453,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
