compiler/lume_hir/src/snapshots/lume_hir__lower__tests__struct_snapshots@property.snap
---
source: compiler/lume_hir/src/lower.rs
description: "\n                struct Foo {\n                    x: Int32 = 0;\n                }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Struct(
                StructDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: Foo,
                    builtin: false,
                    properties: [
                        Property {
                            prop_id: None,
                            visibility: Private,
                            name: Identifier {
                                name: "x",
                                location: <internal>:50:51,
                            },
                            property_type: Type {
                                name: std::Int32,
                                type_params: [],
                                location: <internal>:53:58,
                            },
                            default_value: Some(
                                Expression {
                                    id: 0,
                                    location: <internal>:61:62,
                                    kind: Literal(
                                        Literal {
                                            id: 0,
                                            location: <internal>:61:62,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 0,
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                            location: <internal>:50:63,
                        },
                    ],
                    methods: [],
                    type_parameters: [],
                    location: <internal>:17:81,
                },
            ),
        ),
    },
    statements: {},
    expressions: {
        0: Expression {
            id: 0,
            location: <internal>:61:62,
            kind: Literal(
                Literal {
                    id: 0,
                    location: <internal>:61:62,
                    kind: Int(
                        IntLiteral {
                            id: 0,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
