compiler/lume_hir/src/snapshots/lume_hir__lower__tests__struct_snapshots@pub_property.snap
---
source: compiler/lume_hir/src/lower.rs
description: "\n                struct Foo {\n                    pub x: Int32 = 1;\n                }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Struct(
                StructDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: Foo,
                    properties: [
                        Property {
                            prop_id: None,
                            visibility: Public,
                            name: Identifier {
                                name: "x",
                                location: <internal>:54:55,
                            },
                            property_type: Type {
                                name: std::Int32,
                                type_params: [],
                                location: <internal>:57:62,
                            },
                            default_value: Some(
                                Expression {
                                    id: 0,
                                    location: <internal>:65:66,
                                    kind: Literal(
                                        Literal {
                                            id: 0,
                                            location: <internal>:65:66,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 0,
                                                    value: 1,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                            location: <internal>:50:67,
                        },
                    ],
                    methods: [],
                    type_parameters: [],
                    location: <internal>:17:85,
                },
            ),
        ),
    },
    statements: {},
    expressions: {
        0: Expression {
            id: 0,
            location: <internal>:65:66,
            kind: Literal(
                Literal {
                    id: 0,
                    location: <internal>:65:66,
                    kind: Int(
                        IntLiteral {
                            id: 0,
                            value: 1,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
