compiler/lume_hir/src/snapshots/lume_hir__lower__tests__trait_snapshots@constrained_generics.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"trait Add<T1: Numeric, T2: Numeric> {}\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        1119898709443545213: Type(
            Trait(
                TraitDefinition {
                    id: 1119898709443545213,
                    type_id: None,
                    name: Add,
                    type_parameters: [
                        TypeParameter {
                            name: Identifier {
                                name: "T1",
                                location: <internal>:10:12,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [
                                Type {
                                    name: Numeric,
                                    type_params: [],
                                    location: <internal>:14:21,
                                },
                            ],
                            location: <internal>:10:12,
                        },
                        TypeParameter {
                            name: Identifier {
                                name: "T2",
                                location: <internal>:23:25,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [
                                Type {
                                    name: Numeric,
                                    type_params: [],
                                    location: <internal>:27:34,
                                },
                            ],
                            location: <internal>:23:25,
                        },
                    ],
                    methods: [],
                    location: <internal>:0:38,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
